--- a/index.html
+++ b/index.html
@@ -1,43 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="icon_64.svg" type="image/svg+xml" />
-    <title>Home</title>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="/">
+
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="webside">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>webside</title>
+  <link rel="manifest" href="manifest.json">
+
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    const serviceWorkerVersion = "1052780469";
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
 <body>
-<div class="title-bar">
-    <span class="title">首页</span>
-</div>
-<span class="content">这里什么都没有，正在构建中。。。</span>
+  <script>
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        },
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
+        }
+      });
+    });
+  </script>
 </body>
-<style>
-    body {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;
-        background-color: #eee;
-    }
-    .title-bar {
-        display: flex;
-        flex-direction: row;
-        height: 56px;
-        background-color: #333;
-        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
-    }
-    .title {
-        padding: 0 24px 0 24px;
-        height: 56px;
-        line-height: 56px;
-        font-size: 18px;
-        color: #fff;
-        text-shadow: 1px 1px rgba(255, 255, 255, 0.3);
-    }
-    .content {
-        font-size: 32px;
-        line-height: 64px;
-        text-align: center;
-    }
-</style>
 </html>
